--- a/mid.html
+++ b/mid.html
@@ -4,10 +4,11 @@
 	<title></title>
 </head>
 <body>
-	<p>Nama: Nurul Fajar</p>
-	<p>Nim: 60200116106</p>
-	<p>Kelas: C</p>
+	<p>Nurul Fajar</p>
+	<p>60200116106</p>
+	<p>C</p>
 	<p>Jurusan: Teknik Informatika</p>
 	<p>fakultas saintek</p>
+	<p>UIN Alauddin Makassar</p>
 </body>
 </html>
